Update change log and release history

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-11-07
+
+        * Bug fix version 1.6.3 released
+        ================================
+
+        Improve documentation and tutorials
+
+
 2019-07-15
 
         * Bug fix version 1.6.2 released
