--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2019-10-31
+2019-11-14
 
         * Version 1.7.0 released
         ========================
 
+        Add Moon constraints to csviscube (#3065)
         Remove response cache before source testing in cttsmap (#2973)
         Enabling running of example scripts from objects in memory (#2925)
         Allow using spectral models without "Prefactor" parameter in cssens
