--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.7.0
 
-14 November 2019
+15 November 2019
 
 
 Introduction
@@ -31,7 +31,12 @@ None
 
 Base classes
 ------------
-None
+The headers in the log files created by cscripts that were derived from the
+ctools.cscript base class were repeated. This repetition was not present in
+the other base classes due to a reopening of the log file in those classes.
+The logic was changed so that the cscripts now behave like the ctools. A log
+file is not written by default in Python, the logFileOpen() method needs to
+be called for that. And the header is only written once in the log file (#3066).
 
 
 ctbin - CTA event binning
