--- a/doc/source/admin/release_history/1.7.rst
+++ b/doc/source/admin/release_history/1.7.rst
@@ -17,6 +17,7 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* Avoid negative squared standard deviations in :ref:`cssrcdetect`
 * [`3066 <https://cta-redmine.irap.omp.eu/issues/3066>`_] -
   Fix log file header repetition in some cscripts
 
