--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2019-11-15
+2019-12-13
 
         * Version 1.7.0 released
         ========================
 
+        Avoid negative squared standard deviations in cssrcdetect
         Fix log file header repetition in some cscripts (#3066)
         Add Moon constraints to csviscube (#3065)
         Remove response cache before source testing in cttsmap (#2973)
