--- a/doc/source/admin/release_history/1.7.rst
+++ b/doc/source/admin/release_history/1.7.rst
@@ -17,6 +17,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`3156 <https://cta-redmine.irap.omp.eu/issues/3156>`_] -
+  Adapt show_pull_histogram.py to matplotlib > 3.1.0
 * Avoid negative squared standard deviations in :ref:`cssrcdetect`
 * [`3066 <https://cta-redmine.irap.omp.eu/issues/3066>`_] -
   Fix log file header repetition in some cscripts
@@ -28,7 +30,9 @@ Improvements
 * [`3065 <https://cta-redmine.irap.omp.eu/issues/3065>`_] -
   Add Moon constraints to :ref:`csviscube`
 * [`2973 <https://cta-redmine.irap.omp.eu/issues/2973>`_] -
-  Remove response cache before source testing in cttsmap
+  Remove response cache before source testing in :ref:`cttsmap`
+* [`2938 <https://cta-redmine.irap.omp.eu/issues/2938>`_] -
+  Add support for Castro plots to :ref:`csspec`
 * [`2925 <https://cta-redmine.irap.omp.eu/issues/2925>`_] -
   Enabling running of example scripts from objects in memory
 * [`1889 <https://cta-redmine.irap.omp.eu/issues/1889>`_] -
