--- a/doc/source/users/tutorials/howto/howto_model_handling_python.ipynb
+++ b/doc/source/users/tutorials/howto/howto_model_handling_python.ipynb
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a new model"
+    "## Creating a new model"
    ]
   },
   {
