--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2020-04-08
+2020-07-02
 
         * Version 1.7.0 released
         ========================
@@ -12,6 +12,7 @@
         Add csscs script for spectral component separation (#2961)
         Add support for Castro plots to csspec (#2938)
         Enabling running of example scripts from objects in memory (#2925)
+        Add support for power-law binning to several tools (#2881)        
         Allow using spectral models without "Prefactor" parameter in cssens
           and cstsdist (#1889)
 
