--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 1.7.0 released
         ========================
 
+        Add Interface Manual to User documentation (#3163)
         Adapt show_pull_histogram.py to matplotlib > 3.1.0 (#3156)
         Avoid negative squared standard deviations in cssrcdetect
         Update user manual for latest CTA IRF (#3075)
