--- a/doc/source/admin/release_history/1.7.rst
+++ b/doc/source/admin/release_history/1.7.rst
@@ -27,6 +27,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`3163 <https://cta-redmine.irap.omp.eu/issues/3163>`_] -
+  Add Interface Manual to User documentation
 * [`3075 <https://cta-redmine.irap.omp.eu/issues/3075>`_] -
   Update user manual for latest CTA IRF
 * [`3065 <https://cta-redmine.irap.omp.eu/issues/3065>`_] -
