Add On/Off analysis to ctlike reference manual (#3154)

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,8 @@ Documentation
 Add Interface Manual to User documentation that provides links to the
 ctools and GammaLib Doxygen documentation (#3163).
 
+Add On/Off analysis to ctlike reference manual (#3154).
+
 Update user manual to indicate where to get the latest CTA IRF (#3075).
 
 
