--- a/doc/source/admin/release_history/1.7.rst
+++ b/doc/source/admin/release_history/1.7.rst
@@ -17,9 +17,10 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`3261 <https://cta-redmine.irap.omp.eu/issues/3261>`_] -
+  Avoid negative squared standard deviations in :ref:`cssrcdetect`
 * [`3156 <https://cta-redmine.irap.omp.eu/issues/3156>`_] -
   Adapt show_pull_histogram.py to matplotlib > 3.1.0
-* Avoid negative squared standard deviations in :ref:`cssrcdetect`
 * [`3066 <https://cta-redmine.irap.omp.eu/issues/3066>`_] -
   Fix log file header repetition in some cscripts
 
