--- a/doc/source/admin/release_history/1.7.rst
+++ b/doc/source/admin/release_history/1.7.rst
@@ -23,7 +23,8 @@ Bug fixes
   Adapt show_pull_histogram.py to matplotlib > 3.1.0
 * [`3066 <https://cta-redmine.irap.omp.eu/issues/3066>`_] -
   Fix log file header repetition in some cscripts
-
+* [`2765 <https://cta-redmine.irap.omp.eu/issues/2765>`_] -
+  Fix numerical glitch in residual computation
 
 Improvements
 ------------
