--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2020-07-20
+
+        * Bug fix version 1.7.1 released
+        ================================
+
+        Speed-up ctbin for stacked event binning (#3275)
+
+
 2020-07-15
 
         * Version 1.7.0 released
