--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2020-07-20
+2020-08-19
 
         * Bug fix version 1.7.1 released
         ================================
 
+        Add units to reference manual of response cube tools (#3321)
         Speed-up ctbin for stacked event binning (#3275)
 
 
