--- a/doc/source/admin/release_history/1.7.1.rst
+++ b/doc/source/admin/release_history/1.7.1.rst
@@ -1,7 +1,7 @@
 .. _1.7.1:
 
-ctools 1.7.1 release (20 July 2020)
-===================================
+ctools 1.7.1 release (19 August 2020)
+=====================================
 
 Overview
 --------
@@ -10,8 +10,8 @@ ctools 1.7.1 is a bug fix release for ctools release 1.7.
 
 The following bugs were fixed:
 
-* ...
-
+* [`3321 <https://cta-redmine.irap.omp.eu/issues/3321>`_] -
+  Add units to reference manual of response cube tools
 
 The following improvements were done:
 
