--- a/doc/source/admin/release_history/1.7.1.rst
+++ b/doc/source/admin/release_history/1.7.1.rst
@@ -1,6 +1,6 @@
 .. _1.7.1:
 
-ctools 1.7.1 release (19 August 2020)
+ctools 1.7.1 release (20 August 2020)
 =====================================
 
 Overview
@@ -10,6 +10,8 @@ ctools 1.7.1 is a bug fix release for ctools release 1.7.
 
 The following bugs were fixed:
 
+* [`3322 <https://cta-redmine.irap.omp.eu/issues/3322>`_] -
+  Copy Python module into pyext/ctools folder
 * [`3321 <https://cta-redmine.irap.omp.eu/issues/3321>`_] -
   Add units to reference manual of response cube tools
 
