--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-08-20
+
+        * Version 1.8.0 released
+        ========================
+
+
 2020-07-15
 
         * Version 1.7.0 released
